Commit as stash. Still buggy.

--- a/.gitignore
+++ b/.gitignore
@@ -743,5 +743,5 @@ $RECYCLE.BIN/
 # End of https://www.gitignore.io/api/tex,latex,linux,macos,python,windows,pycharm,intellij,jupyternotebook,visualstudiocode,jupyternotebooks
 
 # For private
-codes/src/Runs
-codes/Runs
+masters_thesis/codes/src/Runs
+masters_thesis/codes/Runs
