--- a/requirements-macOS.txt
+++ b/requirements-macOS.txt
@@ -1,7 +1,10 @@
-absl-py==0.8.0
+absl-py==0.8.1
 alabaster==0.7.12
 anaconda-client==1.7.2
 anaconda-project==0.8.3
+appdirs==1.4.3
+appnope==0.1.0
+appscript==1.0.1
 asn1crypto==0.24.0
 astor==0.8.0
 astroid==2.2.5
@@ -14,12 +17,12 @@ Babel==2.7.0
 backcall==0.1.0
 backports.os==0.1.1
 backports.shutil-get-terminal-size==1.0.0
--e git+https://github.com/openai/baselines.git@229a772b81155695a2692066b1ef3e7b77f5993a#egg=baselines
-beautifulsoup4==4.8.0
-bitarray==1.0.1
+beautifulsoup4==4.7.1
+bitarray==0.9.3
 bkcharts==0.2
+black==19.3b0
 bleach==3.1.0
-bokeh==1.3.4
+bokeh==1.2.0
 boto==2.49.0
 Bottleneck==1.2.1
 cachetools==3.1.1
@@ -27,36 +30,37 @@ certifi==2019.6.16
 cffi==1.12.3
 chardet==3.0.4
 Click==7.0
-cloudpickle==1.2.2
+cloudpickle==1.2.1
 clyent==1.2.2
-cmake==3.14.4
 colorama==0.4.1
 contextlib2==0.5.5
 cryptography==2.7
 cycler==0.10.0
-Cython==0.29.13
+Cython==0.29.12
 cytoolz==0.10.0
-dask==2.3.0
+dask==2.1.0
 decorator==4.4.0
 defusedxml==0.6.0
-distributed==2.3.2
-docutils==0.15.2
+distributed==2.1.0
+docutils==0.14
 EasyProcess==0.2.7
 entrypoints==0.3
 et-xmlfile==1.0.1
 fastcache==1.1.0
+filelock==3.0.12
+flake8==3.7.8
 Flask==1.1.1
-fsspec==0.4.0
 future==0.17.1
 gast==0.2.2
 gevent==1.4.0
+glob2==0.7
 gmpy2==2.0.8
 google-auth==1.7.1
 google-auth-oauthlib==0.4.1
 google-pasta==0.1.7
 greenlet==0.4.15
 grpcio==1.25.0
-gym==0.15.3
+gym==0.14.0
 h5py==2.10.0
 heapdict==1.0.0
 html5lib==1.0.1
@@ -64,68 +68,67 @@ hyperdash==0.15.3
 idna==2.8
 imageio==2.5.0
 imagesize==1.1.0
-importlib-metadata==0.19
-ipykernel==5.1.2
-ipython==7.8.0
+importlib-metadata==0.17
+ipykernel==5.1.1
+ipython==7.6.1
 ipython-genutils==0.2.0
-ipywidgets==7.5.1
+ipywidgets==7.5.0
 isort==4.3.21
 itsdangerous==1.1.0
 jdcal==1.4.1
-jedi==0.15.1
-jeepney==0.4
+jedi==0.13.3
 Jinja2==2.10.1
 joblib==0.13.2
-JSAnimation==0.1
-json5==0.8.5
-jsonschema==3.0.2
+json5==0.8.4
+jsonschema==3.0.1
 jupyter==1.0.0
 jupyter-client==5.3.1
 jupyter-console==6.0.0
 jupyter-core==4.5.0
 jupyterlab==1.0.2
 jupyterlab-server==1.0.0
-Keras==2.2.5
 Keras-Applications==1.0.8
 Keras-Preprocessing==1.1.0
 keyring==18.0.0
 kiwisolver==1.1.0
-lazy-object-proxy==1.4.2
+lazy-object-proxy==1.4.1
+libarchive-c==2.8
+lief==0.9.0
 llvmlite==0.29.0
 locket==0.2.0
-lxml==4.4.1
+lxml==4.3.4
 Markdown==3.1.1
 MarkupSafe==1.1.1
-matplotlib==3.1.1
+matplotlib==3.1.0
 mccabe==0.6.1
 mistune==0.8.4
-mkl-fft==1.0.14
+mkl-fft==1.0.12
 mkl-random==1.0.2
 mkl-service==2.0.2
 mock==3.0.5
-more-itertools==7.2.0
+more-itertools==7.0.0
 mpmath==1.1.0
 msgpack==0.6.1
 multipledispatch==0.6.0
 nbconvert==5.5.0
 nbformat==4.4.0
 networkx==2.3
-nltk==3.4.5
+nltk==3.4.4
 nose==1.3.7
 notebook==6.0.0
-numba==0.45.1
-numexpr==2.7.0
-numpy==1.17.1
+numba==0.45.0
+numexpr==2.6.9
+numpy==1.16.4
 numpydoc==0.9.1
 oauthlib==3.1.0
 olefile==0.46
 opencv-python==4.1.1.26
 openpyxl==2.6.2
 opt-einsum==3.1.0
-packaging==19.1
-pandas==0.25.1
+packaging==19.0
+pandas==0.24.2
 pandocfilters==1.4.2
-parso==0.5.1
+parso==0.5.0
 partd==1.0.0
 path.py==12.0.1
 pathlib2==2.3.4
@@ -133,12 +136,13 @@ patsy==0.5.1
 pep8==1.7.1
 pexpect==4.7.0
 pickleshare==0.7.5
-Pillow==6.2.1
+Pillow==6.2.0
+pkginfo==1.5.0.1
 pluggy==0.12.0
 ply==3.11
 prometheus-client==0.7.1
 prompt-toolkit==2.0.9
-protobuf==3.9.1
+protobuf==3.10.0
 psutil==5.6.3
 ptyprocess==0.6.0
 py==1.8.0
@@ -149,18 +153,14 @@ pycosat==0.6.3
 pycparser==2.19
 pycrypto==2.6.1
 pycurl==7.43.0.3
-pydot-ng==2.0.0
 pyflakes==2.1.1
 pyglet==1.3.2
 Pygments==2.4.2
 pylint==2.3.1
-pyodbc==4.0.27
+pyodbc==4.0.26
 PyOpenGL==3.1.0
 pyOpenSSL==19.0.0
-pyparsing==2.4.2
-PyQt5==5.13.2
-PyQt5-sip==12.7.0
-PyQtWebEngine==5.13.2
+pyparsing==2.4.0
 pyrsistent==0.14.11
 PySocks==1.7.0
 pytest==5.0.1
@@ -168,27 +168,26 @@ pytest-arraydiff==0.3
 pytest-astropy==0.5.0
 pytest-doctestplus==0.3.0
 pytest-openfiles==0.3.2
-pytest-remotedata==0.3.2
+pytest-remotedata==0.3.1
 python-dateutil==2.8.0
-python-slugify==3.0.3
-pytz==2019.2
+python-slugify==3.0.4
+pytz==2019.1
 PyVirtualDisplay==0.2.4
 PyWavelets==1.0.3
 PyYAML==5.1.2
-pyzmq==18.1.0
+pyzmq==18.0.0
 QtAwesome==0.5.7
-qtconsole==4.5.4
-QtPy==1.9.0
+qtconsole==4.5.1
+QtPy==1.8.0
 requests==2.22.0
 requests-oauthlib==1.3.0
 rope==0.14.0
 rsa==4.0
 ruamel-yaml==0.15.46
 scikit-image==0.15.0
-scikit-learn==0.21.3
+scikit-learn==0.21.2
 scipy==1.3.1
 seaborn==0.9.0
-SecretStorage==3.1.1
 Send2Trash==1.5.0
 simplegeneric==0.8.1
 singledispatch==3.4.0.3
@@ -196,7 +195,7 @@ six==1.12.0
 snowballstemmer==1.9.0
 sortedcollections==1.1.2
 sortedcontainers==2.1.0
-soupsieve==1.9.2
+soupsieve==1.8
 Sphinx==2.1.2
 sphinxcontrib-applehelp==1.0.1
 sphinxcontrib-devhelp==1.0.1
@@ -207,36 +206,39 @@ sphinxcontrib-serializinghtml==1.1.3
 sphinxcontrib-websupport==1.1.2
 spyder==3.3.6
 spyder-kernels==0.5.1
-SQLAlchemy==1.3.7
-statsmodels==0.10.1
+SQLAlchemy==1.3.5
+statsmodels==0.10.0
 sympy==1.4
 tables==3.5.2
 tblib==1.4.0
-tensorboard==2.0.2
+tensorboard==2.0.1
 tensorboardX==1.9
-tensorflow-estimator==2.0.1
-tensorflow-gpu==2.0.0
+tensorflow==2.0.0
+tensorflow-estimator==2.0.0
 termcolor==1.1.0
 terminado==0.8.2
 testpath==0.4.2
-text-unidecode==1.2
+text-unidecode==1.3
+toml==0.10.0
 toolz==0.10.0
 torch==1.2.0
 torchvision==0.4.0
 tornado==6.0.3
-tqdm==4.35.0
+tqdm==4.32.1
 traitlets==4.3.2
 typed-ast==1.3.4
 unicodecsv==0.14.1
 urllib3==1.24.2
 wcwidth==0.1.7
 webencodings==0.5.1
-Werkzeug==0.15.5
-widgetsnbextension==3.5.1
+Werkzeug==0.15.4
+widgetsnbextension==3.5.0
 wrapt==1.11.2
-wurlitzer==1.0.3
+wurlitzer==1.0.2
 xlrd==1.2.0
 XlsxWriter==1.1.8
-xlwt==1.3.0
+xlwings==0.15.8
+xlwt==1.2.0
+yapf==0.28.0
 zict==1.0.0
-zipp==0.5.2
+zipp==0.5.1
